# ss

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: alerts.py  deals.py  health.py  push.py  reports.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/middleware/: debug.py
backend/app/repos/: deal_repo.py  profile_repo.py  push_repo.py  report_repo.py  rule_repo.py
backend/app/schemas/: common.py  deal.py  rule.py  user.py
backend/app/services/: polling_service.py  push_service.py
backend/app/utils/: pagination.py
backend/sql/: views.sql
frontend/: .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: DebugConsole.tsx  debug-bootstrap.tsx  globals.css  layout.tsx  manifest.ts  page.client.tsx  page.tsx  sw-register.tsx
frontend/public/: sw.js
frontend/scripts/: gen-apple-assets.mjs  gen-icons.mjs
